--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -6,9 +6,9 @@
 @import "base/mixins.scss";
 
 // Custom colors
-$primary: {{ site.data.style.highlight | default: "#fed136" }} !default;
-$white: {{ site.data.style.white | default: "#fff" }} !default;
-$black: {{ site.data.style.black | default: "#000" }} !default;
+$primary: {{ site.data.style.highlight | default: "#ff9dfd" }} !default;
+$white: {{ site.data.style.white | default: "#750fd4" }} !default;
+$black: {{ site.data.style.black | default: "#120fd4" }} !default;
 
 // Custom Images
 $header-image: "{{ site.data.style.header-image }}";
