--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("#{$header-image}");
+  background-image: url(https://images.unsplash.com/photo-1562513872-634b8fae6dbe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
