--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -35,6 +35,8 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container">
+	    <div class="sign">
+		    <span class="sign__word">good vibes only</span>
       <div class="intro-text">
 	  {%- if site.data.sitetext.header.title -%}
         <div class="intro-lead-in">{{ site.data.sitetext.header.title | markdownify }}</div>
