--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -17,7 +17,7 @@ header.masthead {
       margin-bottom: 25px;
       @include serif-font;
     }
-    .intro-heading {
+    .sign {
       font-size: 50px;
       font-weight: 700;
       line-height: 50px;
@@ -38,7 +38,7 @@ header.masthead {
         margin-bottom: 25px;
         @include serif-font;
       }
-      .intro-heading {
+      .sign {
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
