--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,6 +1,6 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $gray-900;
+  background-image: url(http://www.treatz.co.uk/images/maincontainer_bg2.png), url(http://www.treatz.co.uk/images/bottom_bg.gif);
   .navbar-toggler {
     font-size: 12px;
     right: 0;
