--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -63,7 +63,7 @@
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
-      background-image: url("assets/img/headerstripes.png"), url("assets/img/headerbloom.gif");
+      background-image: url("/assets/img/headerstripes.png"), url("/assets/img/headerbloom.gif");
       background-size: cover;
       background-color: #401453;
       .navbar-brand {
