--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -17,7 +17,7 @@ header.masthead {
       margin-bottom: 25px;
       @include serif-font;
     }
-    .sign {
+    .intro-heading {
       font-size: 50px;
       font-weight: 700;
       line-height: 50px;
