--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -11,7 +11,9 @@
     @include heading-font;
   }
   .navbar-brand {
-    color: $primary;
+    background-image: url("../img/headerstripes.png"), url("../img/headerbloom.gif");
+    background-size: cover;
+    background-color: #401453;
     @include script-font;
     &.active,
     &:active,
