--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,6 +1,17 @@
 // Styling for the navbar
 #mainNav {
-   background-image: url("../img/headerstripes.png"), url("../img/headerbloom.gif");
+       &.navbar-shrink {
+      padding-top: 0;
+      padding-bottom: 0;
+      background-image: url("../img/headerstripes.png"), url("../img/headerbloom.gif");
+      background-size: cover;
+      background-color: #401453;
+      height: 80px;
+      .navbar-brand {
+        font-size: 1.25em;
+        padding: 12px 0;
+      }
+    }
   .navbar-toggler {
     font-size: 12px;
     right: 0;
