--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -9,6 +9,7 @@
       height: 80px;
       .navbar-brand {
         font-size: 1.25em;
+        padding: 6px 0;
       }
     }
   .navbar-toggler {
